--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+
+  <h1>AB Tasty</h1>
+  <p>I want to</p>
+  <p>see clients</p>
+  <p>see my calendar week</p>
+
+</div>
