--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @appointment do |f| %>
+<%= form_for [@client, @appointment] do |f| %>
 
   <%= f.label :date %>
   <%= f.text_field :date %>
@@ -10,4 +10,4 @@
 
 <% end %>
 
-<%= link_to "Back to list", appointments_path %>
+<%= link_to "Back to list", clients_path %>
