--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -5,11 +5,16 @@
   <% if @client.user == current_user %>
     <p>Total time spend :<%= @client.total_time / 60 %> h <%= @client.total_time % 60 %> min</p>
 
-    <p>All my appointments with <%= @client.name %></p>
+    <h3>All my appointments with <%= @client.name %></h3>
 
-    <% @appointment.each do |appointment| %>
-    <p><%= appointment.date %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</p>
-    <% end %>
+    <ul>
+      <% @appointment.each do |appointment| %>
+        <li><%= appointment.date %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</br>
+        <%= link_to 'Edit this appointement', edit_client_appointment_path(@appointment) %> |
+        <%= link_to 'Delete', client_appointment_path(@appointment), method: :delete %></br>
+        </li>
+      <% end %>
+    </ul>
   <% else %>
     <p>Oh no ! <%= @client.name %> isn't my client.</p>
   <% end %>
