--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,16 +4,17 @@
 
   <%= link_to "Add a new client", new_client_path %>
 
-  <% @clients.each do |client| %>
-    <div class="index-content">
-      <h2><%= client.name %></h2>
-      <!-- <p><%= client.total_time %></p> -->
-      <p><%= client.total_time / 60 %>h <%= client.total_time % 60 %>min</p>
+  <ul>
+    <% @clients.each do |client| %>
+      <li>
+        <p><%= client.name %> :
+        <!-- <p><%= client.total_time %></p> -->
+        <%= client.total_time / 60 %>h <%= client.total_time % 60 %>min
 
-      <%= link_to "Add an appointment", new_client_appointment_path(client) %>
-      <%= link_to "Details", client_path(client) %>
-      <%= link_to "Delete", client_path(client), method: :delete, data: { confirm: "Are you sure?" } %>
-    </div>
-  <% end %>
+        <%= link_to "Details", client_path(client) %> |
+        <%= link_to "Delete", client_path(client), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      </li>
+    <% end %>
+  </ul>
 
 </div>
