--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -7,11 +7,12 @@
 
     <h3>All my appointments with <%= @client.name %></h3>
 
+    <%= link_to "Add an appointment", new_client_appointment_path(@client) %>
+
     <ul>
       <% @appointment.each do |appointment| %>
         <li><%= appointment.date %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</br>
-        <%= link_to "Add an appointment", new_client_appointment_path(@client) %> |
-        <%= link_to 'Edit this appointement', edit_client_appointment_path(@appointment) %> |
+        <%= link_to 'Edit this appointement', edit_client_appointment_path(@client, appointment) %> |
         <%= link_to 'Delete', client_appointment_path(@client,appointment), method: :delete %></br>
         </li>
       <% end %>
