--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,13 +1,16 @@
-<%= form_for [@client, @appointment] do |f| %>
+<div class="container">
+  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
 
-  <%= f.label :date %>
-  <%= f.text_field :date %>
+    <%= simple_form_for [@client, @appointment] do |f| %>
 
-  <%= f.label :duration, 'How long (in minutes) ?' %>
-  <%= f.number_field :duration %>
+      <%= f.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
 
-  <%= f.submit %>
+      <%= f.label :duration, 'How long (in minutes) ?' %>
+      <%= f.number_field :duration %>
 
-<% end %>
+      <%= f.button :submit, "Add this appointment", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 
 <%= link_to "Back to appointment", client_path(@client) %>
