--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -10,7 +10,7 @@
     <%= link_to "Add an appointment", new_client_appointment_path(@client) %>
 
     <ul>
-      <% @appointment.each do |appointment| %>
+      <% @appointments.each do |appointment| %>
         <li><%= appointment.date %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</br>
         <%= link_to 'Edit this appointement', edit_client_appointment_path(@client, appointment) %> |
         <%= link_to 'Delete', client_appointment_path(@client,appointment), method: :delete %></br>
