--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
   <h1>AB Tasty</h1>
   <p>I want to</p>
-  <%= link_to "See all clients", clients_path %>
-  <p>see my calendar week</p>
+  <%= link_to "See all clients", clients_path %></br>
+  <%= link_to "See my calendar week", calendar_path %>
 
 </div>
