--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -11,9 +11,9 @@
 
     <ul>
       <% @appointments.each do |appointment| %>
-        <li><%= appointment.date.strftime("%l %B %Y") %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</br>
+        <li><%= appointment.date.strftime("%e %B %Y") %> : <%= (appointment.duration / 60) %>h <%= (appointment.duration % 60) %> min</br>
         <%= link_to 'Edit this appointement', edit_client_appointment_path(@client, appointment) %> |
-        <%= link_to 'Delete', client_appointment_path(@client,appointment), method: :delete %></br>
+        <%= link_to 'Delete', client_appointment_path(@client,appointment), method: :delete, data: { confirm: "Are you sure?" } %></br>
         </li>
       <% end %>
     </ul>
