--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,35 +1,164 @@
-.card-container {
-  height: 100px;
-  padding: 10px;
-  margin : 10px;
+.index-container {
+  width: 900px;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: rgb(240, 240, 240)
+}
+
+.fas {
+  color: white;
+  opacity: 0.8;
+  font-size: 15px;
+}
+
+.fas:hover {
+  color: white;
+  text-decoration: none;
+  opacity: 1;
+  font-size: 18px;
+  transition: all 0.15s ease;
+}
+
+/* CLIENT CARD */
+.client-header {
+  width: 550px;
+  height: 150px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+}
+
+.client-title h1 {
+  font-size: 50px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  color: $ab-blue;
+}
+
+.client-card-container {
+  height: 70px;
+  width: 550px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  background-color: $ab-blue;
   border: 1px solid lightgrey;
-  border-radius: 5px;
+  border-radius: 50px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr 2fr 1fr 1fr;
   align-items: center;
 }
 
-.card-name {
-  font-size: 25px;
+.client-card-container:hover {
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.7);
+}
+
+.client-card-name {
+  color: white;
+  font-size: 20px;
+  font-weight: lighter;
+  margin-left: 30px;
   padding: 10px;
   grid-column: 1;
 }
 
-.card-time {
+.client-card-time {
+  color: white;
+  font-size: 25px;
   margin-left: 40px;
   grid-column: 2;
 }
 
-.card-options {
-  display: flex;
-  margin: 0 auto;
+.client-card-more {
   grid-column: 3;
+  color: white;
+  margin: 0 auto;
 }
 
-.card-more {
-  margin: 10px;
+.client-card-delete {
+  grid-column: 4;
+  color: white;
+  margin: 0 auto;
 }
 
-.card-delete {
-  margin: 10px;
+/* APPOINTMENT CARD */
+.app-header {
+  width: 550px;
+  height: 150px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
 }
+
+.app-title h1 {
+  font-size: 50px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  color: $ab-blue;
+}
+
+.app-time h1 {
+  font-size: 50px;
+  font-weight: lighter;
+  color: darkgray;
+}
+
+.app-add {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 30px;
+}
+
+.app-card-container {
+  height: 70px;
+  width: 550px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  background-color: $ab-blue;
+  border: 1px solid lightgrey;
+  border-radius: 50px;
+  display: grid;
+  grid-template-columns: 3fr 3fr 1fr 1fr;
+  align-items: center;
+}
+
+.app-card-container:hover {
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.7);
+}
+
+.app-card-date {
+  color: white;
+  font-size: 20px;
+  font-weight: lighter;
+  margin-left: 30px;
+  padding: 10px;
+  grid-column: 1;
+}
+
+.app-card-time {
+  color: white;
+  font-size: 25px;
+  margin-left: 40px;
+  grid-column: 2;
+}
+
+.app-card-edit {
+  grid-column: 3;
+  color: white;
+  margin: 0 auto;
+}
+
+.app-card-delete {
+  grid-column: 4;
+  color: white;
+  margin: 0 auto;
+}
+
+
+
+
+
