--- a/app/assets/stylesheets/layout/_general_layout.scss
+++ b/app/assets/stylesheets/layout/_general_layout.scss
@@ -20,15 +20,6 @@ ul {
   padding: 0;
 }
 
-.fas {
-  color: $ab-blue;
-  opacity: 0.8;
-}
-
-.fas:hover {
-  color: $ab-blue;
+a {
   text-decoration: none;
-  opacity: 1;
-  font-size: 17px;
-  transition: all 0.15s ease;
 }
