--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -8,7 +8,7 @@
       <%= f.label :duration, 'How long (in minutes) ?' %>
       <%= f.number_field :duration %>
 
-      <%= f.button :submit, "Add this appointment", class: "btn btn-primary" %>
+      <%= f.button :submit, "Go", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
