--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,12 +1,19 @@
 <div class="container">
+  <div class="index-container">
 
-  <h1>Appointments</h1>
-
-  <% @appointments.each do |appointment| %>
-    <div class="content">
-      <p><%= appointment.client.name %> on <%= appointment.date %></p>
+    <div class="app-header">
+      <div class="app-title">
+        <h1>Appointments</h1>
+      </div>
     </div>
-  <% end %>
 
-  <%= link_to 'Back to clients list', clients_path %>
+    <% @appointments.each do |appointment| %>
+      <div class="content">
+        <p><%= appointment.client.name %> on <%= appointment.date %></p>
+      </div>
+    <% end %>
+
+    <%= link_to 'Back to clients list', clients_path %>
+
+  </div>
 </div>
