--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   margin: 0 auto;
   padding: 30px;
+  border-radius: 5px;
   background-color: rgb(240, 240, 240)
 }
 
@@ -157,8 +158,5 @@
   color: white;
   margin: 0 auto;
 }
-
-
-
 
 
