--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -5,7 +5,8 @@
   height: 100vh;
   margin: 0 auto;
   padding: 30px;
-  background-color: rgb(240, 240, 240)
+  background-color: rgb(240, 240, 240);
+  border-radius: 5px;
 }
 
 .fas {
