--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,6 +1,10 @@
-<div class="container">
+<div class="form-container">
+  <div class="form-title">
+    <h1>Add a new client</h1>
+  </div>
+  <div class="form-content">
 
-  <h1>Add a new client</h1>
-  <%= render 'form' %>
+    <%= render 'form' %>
 
+  </div>
 </div>
