--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,6 +1,9 @@
-<div class="container">
+<div class="form-container">
+  <div class="form-title">
 
-  <h1>Add an appointment</h1>
+    <h1>Add an appointment</h1>
+  </div>
+
   <%= render 'form' %>
 
 </div>
