--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,10 +1,14 @@
-<%= form_for @client do |f| %>
+<div class="form-content">
+  <%= simple_form_for @client do |f| %>
 
-  <%= f.label :name, 'Enter a name' %>
-  <%= f.text_field :name %>
+    <%= f.label :name, 'Enter a name' %>
+    <%= f.text_field :name %>
 
-  <%= f.submit %>
+    <%= f.button :submit, "Create client", class: "btn btn-info" %>
 
-<% end %>
+  <% end %>
 
-<%= link_to "Back to list", clients_path %>
+  <div class="form-back">
+    <%= link_to "Back to list", clients_path %>
+  </div>
+</div>
