--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,10 +1,10 @@
 
   <div class="cal-container">
-    <div class="cal-header">
+    <div class="cal-header slide-in-left">
       Calendar Week
     </div>
 
-    <div class="cal-content">
+    <div class="cal-content slide-in-bottom">
       <% @days_from_this_week.each do |day| %>
         <div class="cal-card">
 
