--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,16 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.45) 0%, rgba(0,36,61,0.45) 50%), url('https://images.pexels.com/photos/1153213/pexels-photo-1153213.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
 
-  <div class="banner-title">
+  <div class="banner-title focus-in-contract-bck">
     <h1>Welcome on AB Tasty !</h1>
   </div>
 
   <% if user_signed_in? %>
 
     <div class="banner-content">
-      <div class="banner-btn">
+      <div class="banner-btn scale-up-center">
         <%= link_to "See all clients", clients_path, class: "btn btn-lg btn-info" %>
       </div>
-      <div class="banner-btn">
+      <div class="banner-btn scale-up-center">
         <%= link_to "See my calendar week", calendar_path, class: "btn btn-lg btn-info"  %>
       </div>
     </div>
