add simple form in index & show

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.label :duration, 'How long (in minutes) ?' %>
     <%= f.number_field :duration %>
 
-    <%= f.button :submit, "Go", class: "btn btn-primary" %>
+    <%= f.button :submit, "Edit", class: "btn btn-primary" %>
   <% end %>
 
   <div class="form-back">
