--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,13 @@
 .index-container {
-  width: 900px;
-  height: 100vh;
+  width: 1200px;
+  height: 90vh;
   margin: 0 auto;
   padding: 30px;
   border-radius: 5px;
-  background-color: rgb(240, 240, 240)
+  background-color: rgb(240, 240, 240);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .fas {
@@ -22,7 +25,7 @@
 }
 
 /* CLIENT CARD */
-.client-header {
+.client-title {
   width: 550px;
   height: 150px;
   margin: 0 auto;
@@ -159,4 +162,15 @@
   margin: 0 auto;
 }
 
+/* SIMPLE FORM */
 
+.simple-form {
+  width: 500px;
+  background-color: white;
+  padding: 40px;
+  border-radius: 5px;
+}
+
+.simple-form-title {
+  margin-bottom: 20px;
+}
