--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,42 +1,58 @@
 <div class="container">
   <div class="index-container">
 
-    <div class="app-header">
-      <div class="app-title slide-in-left">
-        <h1><%= @client.name %></h1>
+    <div class="list-container">
+      <div class="app-header">
+        <div class="app-title slide-in-left">
+          <h1><%= @client.name %></h1>
+        </div>
+        <div class="app-time slide-in-right">
+          <h1><%= @client.total_time / 60 %> h <%= @client.total_time % 60 %> min</h1>
+        </div>
       </div>
-      <div class="app-time slide-in-right">
-        <h1><%= @client.total_time / 60 %> h <%= @client.total_time % 60 %> min</h1>
+
+      <ul>
+        <% @appointments.each do |appointment| %>
+          <li>
+            <div class="app-card-container slide-in-bottom">
+              <div class="app-card-date">
+                <%= appointment.date.strftime("%e %B %Y") %>
+              </div>
+              <div class="app-card-time">
+               <%= (appointment.duration / 60) %> h <%= (appointment.duration % 60) %> min
+              </div>
+              <div class="app-card-edit">
+                <%= link_to '', edit_client_appointment_path(@client, appointment), class:"fas fa-edit" %>
+              </div>
+              <div class="app-card-delete" id="delete">
+                <%= link_to '', client_appointment_path(@client,appointment), method: :delete, class:"fas fa-trash-alt" %>
+              </div>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+
+      <div class="app-add slide-in-bottom">
+        <%= link_to "Back to list", clients_path %>
       </div>
     </div>
 
-    <div class="app-add slide-in-bottom">
-      <%= link_to "Add an appointment", new_client_appointment_path(@client), class:"btn btn-info" %>
+    <div class="simple-form">
+      <div class="simple-form-title">
+        <h1>Add an appointment</h1>
+      </div>
+      <div class="simple-form-content">
+        <%= simple_form_for [@client, @appointment] do |f| %>
+
+          <%= f.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
+
+          <%= f.label :duration, 'How long (in minutes) ?' %>
+          <%= f.number_field :duration %>
+
+          <%= f.button :submit, "Add appointment", class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
 
-    <ul>
-      <% @appointments.each do |appointment| %>
-        <li>
-          <div class="app-card-container slide-in-bottom">
-            <div class="app-card-date">
-              <%= appointment.date.strftime("%e %B %Y") %>
-            </div>
-            <div class="app-card-time">
-             <%= (appointment.duration / 60) %> h <%= (appointment.duration % 60) %> min
-            </div>
-            <div class="app-card-edit">
-              <%= link_to '', edit_client_appointment_path(@client, appointment), class:"fas fa-edit" %>
-            </div>
-            <div class="app-card-delete" id="delete">
-              <%= link_to '', client_appointment_path(@client,appointment), method: :delete, class:"fas fa-trash-alt" %>
-            </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-
-    <div class="app-add slide-in-bottom">
-      <%= link_to "Back to list", clients_path %>
-    </div>
   </div>
 </div>
