--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -19,3 +19,17 @@
 .form-back {
   margin-top: 30px;
 }
+
+/* SIMPLE FORM */
+
+.simple-form {
+  width: 500px;
+  background-color: white;
+  padding: 40px;
+  border-radius: 5px;
+  margin: 20px;
+}
+
+.simple-form-title {
+  margin-bottom: 20px;
+}
