--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,7 @@
   font-size: 100px;
   font-family: 'Alegreya Sans SC', sans-serif;
   font-weight: bold;
+  color: white;
 }
 
 .banner-content {
