--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -5,6 +5,7 @@
       <div class="app-header">
         <div class="app-title slide-in-left">
           <h1><%= @client.name %></h1>
+          <h5><%= pluralize @appointments.size, "appointment" %></h5>
         </div>
         <div class="app-time slide-in-right">
           <h1><%= @client.total_time / 60 %> h <%= @client.total_time % 60 %> min</h1>
