--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -1,4 +1,5 @@
 /* CALENDAR */
+/* -------- */
 
 .cal-container {
   width: 1300px;
@@ -48,6 +49,7 @@
   height: 30px;
   width: 200px;
   margin: 0 auto;
+  margin-top: 10px;
   color: darkgrey;
   font-size: 15px;
   text-align: center;
