--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="form-container">
+  <div class="simple-form">
 
-  <h1>Edit an appointment</h1>
-  <%= render 'form' %>
+    <h1>Edit an appointment</h1>
+    <%= render 'form' %>
 
+  </div>
 </div>
