--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -3,7 +3,7 @@
 
 .cal-container {
   width: 1300px;
-  height: 100vh;
+  min-height: calc(100vh - 56px);
   margin: 0 auto;
   padding: 30px;
   background-color: rgb(240, 240, 240);
