--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 .banner {
+  min-height: calc(100vh - 56px);
   color: white;
   text-align: center;
-  height: 100vh;
   background-size: cover;
   display: flex;
   align-items: center;
