--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,8 +1,10 @@
 <div class="form-container">
   <div class="simple-form">
-
-    <h1>Edit an appointment</h1>
-    <%= render 'form' %>
-
+    <div class="form-title">
+      <h1>Edit an appointment</h1>
+    </div>
+    <div class="simple-form-content">
+      <%= render 'edit' %>
+    </div>
   </div>
 </div>
