--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -25,7 +25,7 @@
       <h1>Add an appointment</h1>
     </div>
     <div class="simple-form-content">
-      <%= render 'appointments/new', appointments: @appointments %>
+      <%= render 'appointments/new', client: @client, appointment: Appointment.new %>
     </div>
   </div>
 
