--- a/app/views/appointments/_list.html.erb
+++ b/app/views/appointments/_list.html.erb
@@ -1,5 +1,5 @@
 <% appointments.each do |appointment| %>
-  <div class="app-card-container slide-in-bottom">
+  <div class="app-card-container slide-in-bottom" id="appointment-<%= appointment.id %>">
     <div class="app-card-date">
       <%= appointment.date.strftime("%e %B %Y") %>
     </div>
@@ -10,7 +10,7 @@
       <%= link_to '', edit_client_appointment_path(@client, appointment), class:"fas fa-edit" %>
     </div>
     <div class="app-card-delete" id="delete">
-      <%= link_to '', client_appointment_path(@client, appointment), method: :delete, class:"fas fa-trash-alt" %>
+      <%= link_to '', client_appointment_path(@client, appointment), method: :delete, remote: true, class:"fas fa-trash-alt" %>
     </div>
   </div>
 <% end %>
